# wifi_offload_rpi3

./: .gitignore  AGENTS.md  CLAUDE.md  PLANNING.md  README.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: PROJECT_SUMMARY.md
docs/test-results/: e2e-phase6.md
kas/: kas.yml
kas/machine/: qemuarm.yml  rpi3.yml
meta-netservice/conf/: layer.conf
meta-netservice/recipes-core/images/: netservice-image.bb
meta-netservice/recipes-kernel/linux/: linux-raspberrypi_%.bbappend  linux-yocto_%.bbappend
meta-netservice/recipes-kernel/linux/linux-raspberrypi/: netservice.cfg
meta-netservice/recipes-kernel/linux/linux-yocto/: netservice.cfg
meta-netservice/recipes-netservice/wifi-offload-manager/: wifi-offload-manager.bb
meta-netservice/recipes-netservice/wifi-offload-manager/files/: path-policies.json  setup-test-vlans.service  setup-test-vlans.sh  wifi-offload-manager.service
scripts/: deploy.sh  drop-mptcp-path.sh  mptcp_server.py  run-mptcp-fota-test.sh  setup-test-vlans.sh
tests/: e2e_consumer_test.py
wifi-offload-manager/: CMakeLists.txt
wifi-offload-manager/config/: path-policies.json
wifi-offload-manager/src/: main.cpp
wifi-offload-manager/src/api/: consumer_api_server.cpp  consumer_api_server.hpp
wifi-offload-manager/src/common/: error.hpp  logger.hpp  types.hpp
wifi-offload-manager/src/config/: config_loader.cpp  config_loader.hpp
wifi-offload-manager/src/fsm/: path_state_fsm.cpp  path_state_fsm.hpp
wifi-offload-manager/src/mptcp/: mptcp_manager.cpp  mptcp_manager.hpp
wifi-offload-manager/src/routing/: routing_policy_manager.cpp  routing_policy_manager.hpp
wifi-offload-manager/src/wpa/: build_config.h  common.h  includes.h  os.h  wpa_monitor.cpp  wpa_monitor.hpp
wifi-offload-manager/systemd/: wifi-offload-manager.service
wifi-offload-manager/tests/: CMakeLists.txt  fota_consumer.cpp  mock_consumer.cpp  test_config_loader.cpp  test_consumer_api.cpp  test_path_state_fsm.cpp  test_routing_policy.cpp
